--- a/Space Waves.html
+++ b/Space Waves.html
@@ -2,7 +2,7 @@
     
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>New Tab</title>
+    <title>Google</title>
     <style>html {
     box-sizing: border-box;
 }
