--- a/Geometry Dash Arrow.html
+++ b/Geometry Dash Arrow.html
@@ -2,7 +2,7 @@
     <link rel="manifest" href="./manifest.json">
     
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <title>Geometry Dash Arrow</title>
+    <title>Google</title>
     <style type="text/css">
         html {
             overflow: hidden;
@@ -1140,3 +1140,4 @@ if (typeof window !== 'undefined') {
     </div>
     <div data-id="google-instream-ad-overlay" class="VLcqU"></div></div></div><script async="" crossorigin="anonymous">
 </script></body>
+
